--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -1,8 +1,11 @@
 body {
     /* Added a background image for the page */
     background-image: url("images/background.png");
+    /* Center the background image */
     background-position: center;
+    /* Fix the background during scroll */
     background-attachment: fixed;
+    /* Cover the entire viewport */
     background-size: cover;
     height: 100%;
     margin: 0;
@@ -10,7 +13,9 @@ body {
 }
 
 .form-container {
+    /* Center the form container with spacing */
     display: flex;
+    /* Center horizontally and vertically */
     justify-content: center;
     align-items: center;
     margin-top: 50px;
@@ -18,22 +23,27 @@ body {
 }
 
 form {
+    /* Style for the form layout */
     display: flex;
+    /* Stack elements verticall */
     flex-direction: column;
     align-items: center;
     gap: 10px;
     background-color: hsl(0, 0%, 95%);
     padding: 20px;
     border-radius: 10px;
+    /* Shadow effect */
     box-shadow: 0 4px 8px hsla(0, 0%, 0%, 0.1);
     max-width: 700px;
 }
 
 input {
+    /* Vertical margin for inputs */
     margin: 10px 0;
 }
 
 .gender-group {
+    /* Style for gender input group-inline dispaly */
     display: inline-block;
     margin-left: 5px;
     padding-right: 20px;
@@ -45,6 +55,7 @@ input[type="text"],
 input[type="Email"],
 input[type="password"],
 input[type="date"] {
+    /* Styles for the input types */
     padding: 10px;
     width: 100%;
     max-width: 300px;
@@ -56,12 +67,15 @@ input[type="date"] {
 
 input[type="submit"],
 input[type="reset"] {
+    /* Styles for the submit (eggrafi) and the reset buttons*/
     padding: 10px 20px;
     background-color: hsl(122, 39%, 49%);
     color: white;
     border: none;
     border-radius: 5px;
+    /* Pointer cursor on hover */
     cursor: pointer;
+    /* Smooth background transition */
     transition: background-color 0.3s ease;
     margin-top: 10px;
 }
@@ -72,18 +86,21 @@ input[type="reset"]:hover {
 }
 
 select {
+    /* Styles for the select dropdown menu*/
     padding: 5px;
     border: 2px solid hsl(0, 0%, 80%);
     box-sizing: border-box;
 }
 
 label {
+    /* Styles for labels */
     width: 100%;
     max-width: 300px;
     text-align: center;
 }
 
 #terms {
+    /* Margin for terms checkbox */
     margin-left: 6px;
 }
 
